--- a/src/app/components/pages/footer/footer.html
+++ b/src/app/components/pages/footer/footer.html
@@ -71,7 +71,9 @@
 
             <p class="text-gray-400 flex items-center gap-2 mb-2">
                 <i class="pi pi-map-marker text-red-500"></i>
-                Kaloor- Ernakulam – 682020
+                63/219-E, 2nd Floor, Kaloor Kadavanthra Road,
+                Near Kadavanthra Jn Ernakulam -Kerala -India.
+                Pin code -682020
             </p>
 
             <p class="text-gray-400 flex items-center gap-2 mb-2">
@@ -84,7 +86,7 @@
             <p class="text-gray-400 flex items-center gap-2 mb-2">
                 <i class="pi pi-envelope text-red-500"></i>
                 <a href="mailto:go@goidt.in" class="hover:text-pink-400">
-                    go@goidt.in, <br> hrishi@goidt.in, <br> bhagavath@goidt.in 
+                    hrishi@indiadestinationtours.com <br>go@ indiadestinationtours.com, <br> bhagavath@goidt.in
                 </a>
             </p>
 
