--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -14,7 +14,7 @@
 
     <div class="relative container mx-auto flex flex-col lg:flex-row items-center
            px-6 md:px-12 transition-all duration-700">
-        <div class="flex-1 text-center lg:text-left space-y-8">
+        <div class="flex-1 text-center lg:text-left space-y-8 mt-12">
 
             <h1 class="text-4xl md:text-5xl lg:text-6xl font-extrabold
                      bg-gradient-to-r from-red-500 via-pink-500 to-red-600
@@ -66,7 +66,7 @@
 
             <img src="assets/images/bg23.png" alt="Travel Banner" class="w-full max-w-md lg:max-w-lg
                drop-shadow-[0_20px_40px_rgba(255,0,80,0.25)]
-                mt-[120px]">
+                sm:mt-0 md:mt-[120px] ">
         </div>
     </div>
 </div>
