--- a/src/app/components/inbound/inbound-package/inbound-itinerary/inbound-itinerary.html
+++ b/src/app/components/inbound/inbound-package/inbound-itinerary/inbound-itinerary.html
@@ -1,4 +1,4 @@
-<section data-animate="detailed-itinerary" class="relative overflow-hidden rounded-2xl p-6
+<section data-animate="detailed-itinerary" class="relative overflow-hidden rounded-2xl p-3 md:p-6 
     backdrop-blur-xl shadow-[0_25px_80px_-20px_rgba(220,38,38,0.45)]">
     <div class="relative z-10">
         <div class="absolute left-6 top-0 bottom-0 w-[3px]
@@ -15,12 +15,15 @@
             </div>
 
             <!-- Card -->
-            <div class="ml-20 w-full backdrop-blur-lg border border-red-100 shadow-md rounded-2xl p-4 w-full
-                  hover:shadow-xl hover:scale-[1.02] transition-all duration-300 bg-center bg-cover" style="
-                background-image: url('assets/images/redBg11.jpg');">
+            <div class="ml-14 sm:ml-6 md:ml-20 w-full
+                     backdrop-blur-lg border border-red-100 shadow-md rounded-2xl p-4
+                     hover:shadow-xl hover:scale-[1.02] transition-all duration-300
+                     bg-center bg-cover" style="background-image: url('assets/images/redBg11.jpg');">
 
                 <!-- Day Title -->
-                <h3 class="text-xl font-semibold text-red-600 mb-2"> {{ day.day }} – {{ day.title }} </h3>
+                <h3 class="text-xl font-semibold text-red-600 mb-2 bg-white rounded-2xl p-2"> {{ day.day }} – {{
+                    day.title
+                    }} </h3>
                 <ul class="space-y-2">
                     <li *ngFor="let detail of day.details" class="flex items-start gap-3 text-gray-800">
                         <span class="text-red-500 text-lg">•</span>
