--- a/src/app/components/inbound/inbound-package/inbound-summary/inbound-summary.html
+++ b/src/app/components/inbound/inbound-package/inbound-summary/inbound-summary.html
@@ -1,4 +1,4 @@
-<div class="space-y-4">
+<div class="">
     <section data-animate="terms" class="bg-white p-6 space-y-6">
         <!-- Sightseeing -->
         <section>
@@ -63,7 +63,7 @@
     </section>
 
     <!-- Supplemental Attractions -->
-    <section class="bg-white rounded-2xl shadow-xl px-6">
+    <section class="bg-white  shadow-xl px-6">
         <h2 class="text-xl md:text-2xl font-bold mb-2 text-red-500">
             <span class="bg-red-100 text-red-600 p-2 rounded-full mr-4">📌</span> Supplemental Attractions
         </h2>
