--- a/src/app/components/pages/contact/contact.html
+++ b/src/app/components/pages/contact/contact.html
@@ -13,7 +13,7 @@
     <div
         class="relative max-w-6xl w-full bg-white/20 backdrop-blur-lg rounded-3xl shadow-2xl overflow-hidden p-8 space-y-8">
         <div class="w-full text-center">
-            <h2 class="text-3xl md:text-4xl font-extrabold text-white drop-shadow-lg">
+            <h2 class="text-2xl md:text-3xl font-bold text-white drop-shadow-lg">
                 Contact Us
             </h2>
         </div>
