--- a/src/app/components/pages/subscription/subscription.html
+++ b/src/app/components/pages/subscription/subscription.html
@@ -14,7 +14,7 @@
         }
 
         <div class="relative z-10 mx-auto max-w-5xl px-6 text-center text-white" [ngClass]="modal? 'py-0' :' py-16'">
-            <h2 class="text-2xl sm:text-4xl lg:text-5   xl font-bold tracking-tight">
+            <h2 class="text-xl sm:text-xl lg:text-3xl font-semibold tracking-tight">
                 Stay Updated With Our Travel Offers
             </h2>
             <p class="mt-3 sm:mt-4 text-white/90 text-base sm:text-lg">
