--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -74,7 +74,7 @@
 
 
 <app-service></app-service>
-<app-subscription></app-subscription>
+<!-- <app-subscription></app-subscription> -->
 <div *ngIf="isSubscriptionOpen" class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50">
     <div class="bg-red-500 rounded-xl shadow-lg w-full max-w-md p-6 relative">
         <button (click)="isSubscriptionOpen = false" class="absolute top-3 right-3 text-gray-500 hover:text-gray-700"> ✕
