--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
-<app-welcome-modal></app-welcome-modal>
+<app-welcome-modal (closed)="onWelcomeClosed($event)"></app-welcome-modal>
 <main class="min-h-[70vh]">
     <router-outlet />
 </main>
 <app-footer></app-footer>
-<app-chatbot></app-chatbot>
+<app-chatbot [isOpen]="welcomeClosed"></app-chatbot>
