--- a/src/app/components/pages/footer/footer.html
+++ b/src/app/components/pages/footer/footer.html
@@ -72,8 +72,8 @@
             <p class="text-gray-400 flex items-center gap-2 mb-2">
                 <i class="pi pi-map-marker text-red-500"></i>
                 63/219-E, 2nd Floor, Kaloor Kadavanthra Road,
-                Near Kadavanthra Jn Ernakulam -Kerala -India.
-                Pin code -682020
+                Near Kadavanthra Jn Ernakulamm Kerala, India.
+                <br> Pin code -682020
             </p>
 
             <p class="text-gray-400 flex items-center gap-2 mb-2">
@@ -83,12 +83,17 @@
                 </a>
             </p>
 
-            <p class="text-gray-400 flex items-center gap-2 mb-2">
-                <i class="pi pi-envelope text-red-500"></i>
-                <a href="mailto:go@goidt.in" class="hover:text-pink-400">
-                    hrishi@indiadestinationtours.com <br>go@ indiadestinationtours.com, <br> bhagavath@goidt.in
-                </a>
-            </p>
+            <div class="text-gray-400 flex items-start gap-2 mb-2">
+                <i class="pi pi-envelope text-red-500 mt-1"></i>
+                <div class="flex flex-col">
+                    <a href="mailto:hrishi@indiadestinationtours.com" class="hover:text-pink-400">
+                        hrishi@indiadestinationtours.com
+                    </a>
+                    <a href="mailto:go@indiadestinationtours.com" class="hover:text-pink-400">
+                        go@indiadestinationtours.com
+                    </a>
+                </div>
+            </div>
 
             <p class="text-gray-400 flex items-center gap-2">
                 <i class="pi pi-globe text-red-500"></i>
