--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -28,7 +28,7 @@
 
             <!-- Subtitle -->
             <p class="text-base sm:text-sm md:text-lg text-gray-600
-               max-w-xl mx-auto lg:mx-0 leading-relaxed" data-aos="fade-right" data-aos-delay="200">
+               max-w-xl mx-auto lg:mx-0 leading-relaxed">
 
                 Discover premium inbound and outbound tour packages,
                 thoughtfully designed for memorable journeys.
