--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -35,8 +35,7 @@
             </p>
 
             <!-- CTA Buttons -->
-            <div class="flex flex-wrap gap-4 justify-center lg:justify-start pt-4" data-aos="fade-up"
-                data-aos-delay="350">
+            <div class="flex flex-wrap gap-4 justify-center lg:justify-start pt-4">
 
                 <!-- Primary -->
                 <a routerLink="/inbound" class="px-6 py-3 rounded-full
@@ -62,7 +61,7 @@
         </div>
 
         <!-- RIGHT IMAGE -->
-        <div class="flex-1 flex justify-center lg:justify-end mt-12 lg:mt-0" data-aos="fade-left" data-aos-delay="300">
+        <div class="flex-1 flex justify-center lg:justify-end mt-12 lg:mt-0">
 
             <img src="assets/images/bg23.png" alt="Travel Banner" class="w-full max-w-md lg:max-w-lg
                drop-shadow-[0_20px_40px_rgba(255,0,80,0.25)]
