--- a/src/app/components/home/home-hotels/home-hotels.html
+++ b/src/app/components/home/home-hotels/home-hotels.html
@@ -1,5 +1,4 @@
-<section data-aos="fade-in"
-    class="max-w-9xl mx-auto p-4 rounded-2xl bg-gradient-to-br from-red-500 to-red-600 text-white">
+<section class="max-w-9xl mx-auto p-4 rounded-2xl bg-gradient-to-br from-red-500 to-red-600 text-white">
     <h3 class="text-xl font-semibold mb-1"> <i class="pi pi-building + ' text-2xl mr-3'"></i>
         Hotels and Resorts </h3>
     <p class="text-sm opacity-90">Handpicked Stays for Every Destination</p>
